# MCU_Libs

./: .gitmodules  CMakeLists.txt  README.md
AD5667/: AD5667.cpp  AD5667.hpp  CMakeLists.txt
ControlAlgorithms/: CMakeLists.txt  ControlAlgorithms.hpp  PID_Controller.hpp
DoubleBuffer/: CMakeLists.txt  DoubleBuffer.hpp
GPIO/: CMakeLists.txt  GPIO.hpp
Interpolation/: CMakeLists.txt  IrregularMeshLinearInterpolation.hpp  RegularMeshLinearInterpolation.hpp  Utils.hpp
MathUtils/: CMakeLists.txt  MathUtils.hpp
PeripheralCommunication/: ByteMergeArraySignalProcessor.hpp  ByteMergeSignalProcessor.hpp  ByteSplitArraySignalProcessor.hpp  ByteSplitSignalProcessor.hpp  CMakeLists.txt  PeripheralSendSignalProcessor.hpp  SPI_DMA_Peripheral.hpp  SPI_Peripheral.hpp  UART_DMA_Peripheral.hpp  UART_Peripheral.hpp
SignalProcessors/: ArrayToVectorConvertSignalProcessor.hpp  CMakeLists.txt  ExponentialMovingAverageSignalProcessor.hpp  FFT_ModulationDetectorSignalProcessor.hpp  FFT_SignalProcessor.hpp  FFT_ToMagnitudeSignalProcessor.hpp  GoertzelFrequencyDetectionSignalProcessor.hpp  MeanSignalProcessor.hpp  ParallelSignalProcessing.hpp  PickFirstSignalProcessor.hpp  PrintSignalProcessor.hpp  QPD_PositionSignalProcessor.hpp  SignalProcessingPipeline.hpp  UnitySignalProcessor.hpp  VectorToArrayConvertSignalProcessor.hpp
SignalProcessors/TestProcessors/: DoubleSignalProcessor.hpp  FromVecSignalProcessor.hpp  IncrementSignalProcessor.hpp  ToVecSignalProcessor.hpp
Timer/: CMakeLists.txt  Timer.cpp  Timer.hpp
retarget/: CMakeLists.txt
